<resources>
    <string name="app_name">Mobile Shop</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="nav_home">Trang Chủ</string>
    <string name="nav_account">Tài Khoản</string>
    <string name="nav_news">Tin Tức</string>
    <string name="nav_sanpham">Sản Phẩm</string>
    <string name="open_drawer">Open</string>
    <string name="close_drawer">Close</string>
    <string name="giohang">Giỏ Hàng</string>
    <string name="phone">ĐIỆN THOẠI</string>
    <string name="laptop">LAPTOP</string>
    <string name="tablet">MÁY TÍNH BẢNG</string>
    <string name="pk">LINK PHỤ KIỆN</string>
    <string name="hotro"><![CDATA[CHÍNH SÁCH & HỖ TRỢ]]></string>
    <string name="meohay">MẸO HAY</string>
    <string name="tinmoi">TIN MỚI</string>
    <string name="thitruong">THỊ TRƯỜNG</string>
    <string name="danhgia">ĐÁNH GIÁ</string>
    <string name="tingame">TIN GAME,APP</string>
    <string name="hint_password">Password</string>
    <string name="hint_email">Email</string>
    <string name="btn_login">Login</string>
    <string name="btn_link_to_register">OR CONNECT WITH</string>
    <string name="btn_forgot_password"><u>Forgot password?</u></string>
    <string name="fb">FACEBOOK</string>
    <string name="gg">Google</string>
    <string name="title1">ĐIỆN THOẠI KHUYẾN MẠI HOT</string>
    <string name="home">TRANG CHỦ</string>

    <string name="facebook_app_id">261629417938531</string>
    <string name="facebook_login_protocol_scheme">fb261629417938531</string>
    <string name="manhinh">Màn hình: </string>
    <string name="ram">Ram: </string>
    <string name="vga">VGA: </string>
    <string name="hdh">HĐH: </string>
    <string name="cpu">CPU: </string>
    <string name="tl">Nặng: </string>
    <string name="about">ABOUT</string>
    <string name="exit">EXIT</string>
    <string name="ck_user">Remember Me</string>
    <string name="image">contentDescription</string>
    <string name="name">Macbook 12 256GB (2017)</string>
    <string name="gia_lap_top">33.999.000đ</string>
    <string name="value_manhinh">12 inch, 2304 x 1440 Pixels</string>
    <string name="cpu2">Intel, Core M3</string>
    <string name="ram2">Intel, Core M3</string>
    <string name="vga2">Intel HD Graphics 615</string>
    <string name="hdh2">Intel HD Graphics 615</string>
    <string name="tl2">0.92 kg</string>
    <string name="tg">Trả góp 0%</string>
    <string name="dt">I Phone X 256GB</string>
    <string name="name2">Minh Tien Pro</string>
    <string name="email">trantien1596@gmail.com</string>
    <string name="phone_hot">ĐIỆN THOẠI KHUYẾN MÃI HOT</string>
    <string name="laptop_hot">LAPTOP NỔI BẬT NHẤT</string>
    <string name="table_hot">TABLET MỚI NHẤT</string>
    <string name="more">Xem thêm </string>
    <string name="v">v</string>
    <string name="more2">Xem tất cả</string>
    <string name="tintuc">TIN CÔNG NGHỆ</string>
    <string name="camera">Camera trước:</string>
    <string name="camera2">Camera sau:</string>
    <string name="bonho">Bộ nhớ trong:</string>
    <string name="gpu">GPU:</string>
    <string name="dlpin">Dung lượng pin:</string>
    <string name="tv_cauhinh">Xem cấu hình chi tiết</string>
    <string name="detail">ĐẶC ĐIỂM NỔI BẬT CỦA</string>
    <string name="detail2">CẤU HÌNH CỦA</string>
    <string name="ocung">Ổ cứng</string>
    <string name="dohoa">Card màn hình</string>
    <string name="ketnoi">Cổng kết nối</string>
    <string name="tl3">Trọng lượng</string>
    <string name="ketnoi2">Kết nối</string>
    <string name="choice">Please select</string>
    <string name="choice2">Choice</string>
    <string name="cart">Giỏ hàng trống</string>
    <string name="a">Không có sản phẩm nào trong giỏ hàng của bạn</string>
    <string name="back">Quay lại trang chủ</string>
    <string name="please_wait">Please wait...</string>
    <string name="spinner">Chọn số lượng sản phẩm mà bạn muốn mua?</string>
    <string name="ok">Ok</string>
    <string name="submit">Submit</string>
    <string name="share">Share</string>
    <string name="settings">Settings</string>
    <string name="search">Type name</string>
    <string name="nhanxet"><![CDATA[ĐÁNH GIÁ &amp; NHẬN XÉT]]></string>
    <string name="channel_name">Channel name</string>
    <string name="channel_description">order successfully</string>

    <string-array name="tentintuc">

        <item>TIN MỚI </item>
        <item>MẸO HAY </item>
        <item>THỊ TRƯỜNG </item>
        <item>ĐÁNH GIÁ </item>
        <item>TIN GAME,APP </item>
    </string-array>
    <string-array name="choice">
        <item>Gallery</item>
        <item>Camera</item>
    </string-array>

    <string-array name="number">
        <item>Please select the number of products...</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
    </string-array>


</resources>
