<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="10dp"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tv_name_laptop2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="CẤU HÌNH OPPO F7"
        android:padding="10dp"
        android:textSize="18sp"
        android:textColor="@color/black" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="5dp"
        android:background="@color/gray_splash">

        <TextView

            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:text="@string/cpu"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/tv_cpu_lap"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tl2"
            android:layout_marginLeft="7dp"
            android:layout_marginStart="7dp"
            android:textSize="18sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="5dp">

        <TextView

            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:text="@string/ram"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/tv_ram_lap"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:layout_marginLeft="7dp"
            android:layout_marginStart="7dp"
            android:text="@string/vga2" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/gray_splash"
        android:layout_marginTop="5dp">

        <TextView

            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:text="@string/ocung"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/tv_ocung_laptop"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cpu2"
            android:textSize="18sp"
            android:layout_marginLeft="7dp"
            android:layout_marginStart="7dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"

        android:layout_marginTop="10dp">

        <TextView

            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:text="@string/manhinh"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/tv_manhinh_laptop2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/value_manhinh"
            android:textSize="18sp"
            android:layout_marginLeft="7dp"
            android:layout_marginStart="7dp" />


    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/gray_splash"
        android:layout_marginTop="5dp">

        <TextView

            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:text="@string/dohoa"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/tv_dohoa"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ram2"
            android:textSize="18sp"
            android:layout_marginLeft="7dp"
            android:layout_marginStart="7dp" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="5dp">

        <TextView

            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:text="@string/ketnoi"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/tv_ketnoi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:layout_marginLeft="7dp"
            android:layout_marginStart="7dp"
            android:text="@string/hdh2" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/gray_splash"
        android:layout_marginTop="5dp">

        <TextView

            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:text="@string/hdh"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/tv_hdh_lap"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tl2"
            android:layout_marginLeft="7dp"
            android:layout_marginStart="7dp"
            android:textSize="18sp" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="5dp">

        <TextView

            android:layout_width="140dp"
            android:layout_height="match_parent"
            android:text="@string/tl3"
            android:textSize="17sp" />

        <TextView
            android:id="@+id/tv_tl_lap"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tl2"
            android:layout_marginLeft="7dp"
            android:layout_marginStart="7dp"
            android:textSize="18sp" />

    </LinearLayout>

    <TextView
        android:id="@+id/tv_all_cauhinh_lap"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_cauhinh"
        android:layout_gravity="center"
        android:textSize="18sp"
        android:padding="10dp"
        android:layout_marginTop="5dp"
        android:drawablePadding="5dp"
        android:drawableRight="@drawable/ic_navigate_next_black_18dp"
        android:textColor="@android:color/holo_blue_dark" />

</LinearLayout>