<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="250dp"
    app:cardCornerRadius="3dp">

    <FrameLayout
        android:id="@+id/frameLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="8dp">

        <ImageView
            android:contentDescription="@string/image"
            android:id="@+id/img_phone"
            android:layout_width="100dp"
            android:layout_height="120dp"
            android:layout_gravity="center"
            android:layout_marginBottom="20sp"
            android:src="@drawable/iu" />

        <TextView
            android:id="@+id/tv_name_phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginBottom="40dp"
            android:text="@string/dt"
            android:textColor="@color/black"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/tv_price_phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginBottom="10dp"
            android:text="@string/gia_lap_top" />

        <TextView
            android:id="@+id/tv_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:background="@color/redPhone"
            android:padding="3dp"
            android:textSize="14sp"
            android:text="@string/tg"
            android:textColor="@color/white" />


    </FrameLayout>

</android.support.v7.widget.CardView>