<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="350dp"
    android:layout_height="220dp">

    <LinearLayout
        android:id="@+id/frameLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="8dp">

        <ImageView
            android:id="@+id/img_tablet"
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:contentDescription="@string/image"
            android:src="@drawable/iu" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10dp">


            <TextView
                android:id="@+id/tv_name_tablet"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dt"
                android:textColor="@color/black"
                android:textSize="15sp" />

            <Space
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1" />

            <TextView
                android:id="@+id/tv_status_tablet"
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:layout_gravity="center"
                android:background="@color/redPhone"
                android:text="@string/tg"
                android:textColor="@color/white"
                android:textSize="14sp" />
        </LinearLayout>

        <TextView
            android:id="@+id/tv_price_tablet"
            android:layout_width="wrap_content"
            android:textColor="#ff3d11"
            android:layout_marginTop="5dp"
            android:layout_height="wrap_content"
            android:text="@string/gia_lap_top" />


    </LinearLayout>

</android.support.v7.widget.CardView>